# elbashiq

./: .gitignore  CMakeLists.txt  ElBashiqCommandsTest.ods  Makefile  README  README.md  main  main.c  main.cpp  server
include/: c_sockets_nasser.h  el_bashiq.h  el_bashiq_client.h  el_bashiq_server.h  elbashiq_server.hpp  util.h  utils.h
src/: CMakeLists.txt  c_sockets_nasser.c  el_bashiq.c  el_bashiq_client.c  el_bashiq_server.c  el_bashiq_server.cpp  elbashiq_server.c  elbashiq_server.cpp  utils.c
tests/: README.md
tests/include/: test_el_bashiq_client.h  test_el_bashiq_server.h  test_utils.h
tests/src/: CMakeLists.txt  el_bashiq_client.h  test_el_bashiq_server.c  test_el_bashiq_server.cpp  test_utils.c
