CMAKE_MINIMUM_REQUIRED(VERSION 3.22)
CMAKE_POLICY(SET CMP0012 NEW)
PROJECT (El_Bashiq)
FIND_PACKAGE(Boost 1.8 COMPONENTS ALL)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/tests/include)
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(tests/src)
SET (EXTRA_LIBS TestElBashiqServer TestUtils ElBashiqServer ElBashiqClient Utils)
ADD_EXECUTABLE(${PROJECT_NAME} main.c)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${EXTRA_LIBS})

